--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div id="thank_you" style="display: none;">
       <img src="images/illustration-thank-you.svg" alt="">
-      <p class="selected">You selected <span id="selectedNumber"></span> out of 5</p>
+      <p class="selected">You selected <span id="selectedNumber">nothing</span> out of 5</p>
       <h2>Thank you!</h2>
       <p class="info">We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate
         to get in
